# ecommerce-smartops-saas

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
deploy/: Dockerfile.api  Dockerfile.frontend  nginx.conf  start.sh
doc/: design.md  prompt.md  proposal.md
doc/tasks/: agent-core.md  api.md  auth.md  db.md  deploy.md  frontend-react.md  memory.md  progress.md  tools.md
docs/: AI智能助手实习生面试问答.md  interview-qa.md
frontend/: app.py
frontend/components/: chat_ui.py  sidebar.py  task_runner.py
frontend/pages/: 01_dashboard.py  02_chat.py  03_content.py  04_knowledge.py  05_reports.py
frontend_react/: index.html  package-lock.json  package.json
frontend_react/src/: App.tsx
scripts/: convert_flipkart.py  crawl_competitors.py  crawl_hsia.py  health_check.py  run_dev.py  seed_knowledge.py  sync_knowledge.py
src/agent/: cache.py  graph.py  state.py
src/api/: app.py  dependencies.py  exceptions.py  middleware.py
src/auth/: __init__.py  middleware.py  rate_limit.py  user_service.py
src/db/: __init__.py  crud.py  schema.py
src/llm/: __init__.py  factory.py  mock.py
src/memory/: long_term.py  manager.py  short_term.py  sync.py  vector_store.py
src/observability/: logger.py  middleware.py
src/tools/: amazon_api.py  base.py  erp_api.py  google_ads_api.py  google_shopping.py  logistics.py  meta_ads.py  runner.py  shopify_api.py  web_crawler.py
src/utils/: chart_utils.py
tests/: conftest.py  test_auth.py  test_db.py
tests/test_agent/: test_graph.py
(+34 files in other folders)
