[project]
name = "ecommerce-smartops-agent"
version = "0.1.0"
description = "电商智能体运营系统 - RAG + Planning + Tool Use Agent"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "lhx" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "chromadb>=0.5.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "structlog>=24.0.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.38.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx-ws>=0.6.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
